--- a/pult/controlpanel.ui
+++ b/pult/controlpanel.ui
@@ -99,7 +99,7 @@
         <x>40</x>
         <y>470</y>
         <width>141</width>
-        <height>161</height>
+        <height>184</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -171,7 +171,7 @@
        <rect>
         <x>50</x>
         <y>20</y>
-        <width>181</width>
+        <width>202</width>
         <height>421</height>
        </rect>
       </property>
@@ -319,13 +319,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>880</x>
         <y>490</y>
-        <width>101</width>
-        <height>121</height>
+        <width>117</width>
+        <height>123</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -382,13 +382,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>450</x>
         <y>550</y>
-        <width>150</width>
-        <height>18</height>
+        <width>197</width>
+        <height>23</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -408,13 +408,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>820</x>
         <y>420</y>
-        <width>169</width>
-        <height>18</height>
+        <width>222</width>
+        <height>23</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -434,7 +434,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>820</x>
@@ -542,7 +542,7 @@
         <x>50</x>
         <y>40</y>
         <width>883</width>
-        <height>309</height>
+        <height>328</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -892,7 +892,7 @@
      <x>0</x>
      <y>0</y>
      <width>1040</width>
-     <height>23</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
